1. Remove the restriction on HTTP Header names (JDK Bug: JDK-8213696) 2. Standardize HTTP pre-processing method